# heron

./: .gitignore  README.md  cabal.project  flake.nix  hie.yaml
emulator/: emu.c
flite/: flite.cabal
flite/examples/large/: adjoxo.fl  braun.fl  cichelli.fl  clausify.fl  countdown.fl  fib.fl  knuthbendix.fl  mate.fl  mss.fl  ordlist.fl  permsort.fl  queens.fl  queens2.fl  sumpuz.fl  taut.fl  while.fl
flite/examples/small/: adjoxo.fl  braun.fl  cichelli.fl  clausify.fl  countdown.fl  fib.fl  knuthbendix.fl  mate.fl  permsort.fl  queens.fl  queens2.fl  sumpuz.fl  taut.fl
flite/examples/spectral/: ansi.fail  atom.fail  awards.fl
flite/examples/syntax/: demo.fl
flite/examples/tiny/: adjoxo.fl  braun.fl  cichelli.fl  clausify.fl  countdown.fl  fib.fl  knuthbendix.fl  mate.fl  mss.fl  ordlist.fl  permsort.fl  queens.fl  queens2.fl  sumpuz.fl  taut.fl  while.fl
flite/src/Flite/: Case.hs  CommonSubExpr.hs  Compile.hs  ConcatApp.hs  Dependency.hs  Flatten.hs  Flite.hs  Frontend.hs  Matching.hs  Parse.hs  Predex.hs  Prelude.hs  Pretty.hs  PrettyHaskell.hs  Strictify.hs  Syntax.hs  TemplateSyntax.hs  Traversals.hs
hdl/: Setup.hs  heron.cabal
hdl/src/: Heron.hs
hdl/src/Heron/: Board.hs  Encode.hs  External.hs  Parameters.hs  Semantics.hs  Template.hs  TemplateTH.hs
hdl/src/Heron/Core/: Alu.hs  Board.hs  Collector.hs  Core.hs  Fifo.hs  Heap.hs  ParStack.hs  Rom.hs  Stack.hs  Types.hs
hdl/src/Heron/Primitives/: ClockDiv.hs  DistributedRam.hs  DualPortRam.hs  ReadFirstDualPortRam.hs  ReadFirstTDPModel.hs  UltraRamModel.hs
hdl/src/Heron/Semantics/: Collector.hs  Core.hs
hdl/src/Heron/Xilinx/: ClockDiv.hs  DistributedRam.hs  DualPortRam.hs
hdl/tests/: doctests.hs  unittests.hs
hdl/tests/Heron/Tests/: Board.hs  Template.hs
hdl/tests/Heron/Tests/Core/: Board.hs  Collector.hs  Fifo.hs  Heap.hs  ParStack.hs  Rom.hs  Stack.hs
hdl/tests/benchmarks/: adjoxo.fl  braun.fl  cichelli.fl  clausify.fl  countdown.fl  fib.fl  knuthbendix.fl  mate.fl  mss.fl  ordlist.fl  permsort.fl  queens.fl  sumpuz.fl  taut.fl  while.fl
nix/: overlay.nix
verilator/: Makefile  harness.cpp
vivado/: check_env.sh  default.nix
vivado/alveo_u280/: constrs.xdc  suggestions.rqs  synth.tcl
vivado/alveo_u280/rqs/: idr_eco.tcl  idr_pr_physopt_design_POST_HOOK.tcl  stage2_suggestions.rqs
vivado/sim/: .gitignore  sim.tcl  sim_cfg.tcl
vivado/ultra96_pynq/: block_design.tcl  heron_notebook.ipynb  synth.tcl
vivado/ultra96_pynq/rqs/: stage2_suggestions.rqs
