cabal-version:       2.4
name:                heron
version:             0.2
license:             BSD-2-Clause
author:              Craig Ramsay <craig.ramsay@hw.ac.uk>
maintainer:          Craig Ramsay <craig.ramsay@hw.ac.uk>

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    LambdaCase
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
    TemplateHaskell
    QuasiQuotes
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat
    -haddock
    -O2

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper
  build-depends:
    Cabal >= 2.4,
    base,
    clash-prelude >= 1.6.4 && < 1.9,
    deepseq,
    extra,
    flite == 0.6.2,
    ghc-typelits-extra,
    ghc-typelits-knownnat,
    ghc-typelits-natnormalise,
    process,
    retroclash-lib,

custom-setup
  setup-depends:
    base          >= 4.11 && <5,
    Cabal         >= 2.4

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Heron
    Heron.Board
    Heron.Core.Alu
    Heron.Core.Collector
    Heron.Core.Core
    Heron.Core.Fifo
    Heron.Core.Heap
    Heron.Core.ParStack
    Heron.Core.Rom
    Heron.Core.Stack
    Heron.Core.Types
    Heron.Encode
    Heron.External
    Heron.Parameters
    Heron.Primitives.ClockDiv
    Heron.Primitives.DistributedRam
    Heron.Primitives.DualPortRam
    Heron.Primitives.ReadFirstDualPortRam
    Heron.Primitives.ReadFirstTDPModel
    Heron.Primitives.UltraRamModel
    Heron.Semantics.Collector
    Heron.Semantics.Core
    Heron.Template
  other-modules:
    Heron.TemplateTH
    Paths_heron
  default-language: Haskell2010
  ghc-options: -fconstraint-solver-iterations=1000
               -g
  build-depends:
    barbies,
    barbies-th,
    clash-ghc,
    containers,
    directory,
    fgl,
    graphviz,
    interpolate,
    lens,
    mtl,
    primitive,
    template-haskell,
    temporary,
    text,
    vector,

executable heron
  import: common-options
  main-is: bin/Main.hs
  default-language: Haskell2010
  ghc-options: -fconstraint-solver-iterations=1000
  build-depends: clash-ghc, heron

test-suite doctests
  import:           common-options
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          doctests.hs
  hs-source-dirs:   tests

  build-depends:
    base,
    heron

test-suite test-library
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: unittests.hs
  other-modules:
    Heron.Tests.Board
    Heron.Tests.Core.Collector
    Heron.Tests.Core.Fifo
    Heron.Tests.Core.Heap
    Heron.Tests.Core.Heap
    Heron.Tests.Core.ParStack
    Heron.Tests.Core.ParStack
    Heron.Tests.Core.Rom
    Heron.Tests.Core.Rom
    Heron.Tests.Core.Stack
    Heron.Tests.Core.Stack
    Heron.Tests.Template
    Heron.Tests.Template
  build-depends:
    QuickCheck,
    clash-prelude-hedgehog,
    directory,
    hedgehog,
    hedgehog,
    heron,
    lens,
    mtl,
    process,
    tasty >= 1.2 && < 1.5,
    tasty-hedgehog,
    tasty-th,
    temporary,
